<resources>
    <string name="host">friday.hyperlync.com</string>
    <string name="port">3131</string>
    <string name="app_name">Robot</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="hi_jackson">Hi, Jackson</string>
    <string name="battery_level">70%</string>
    <string name="map_level">74/32</string>
    <string name="online">Online</string>
    <string name="telepresence">Telepresence</string>
    <string name="media">Media</string>
    <string name="navigate">Navigate</string>
    <string name="talk_to_friday">Talk to Friday</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="go_to">Go to</string>
    <string name="choose_room">Choose room</string>
    <string name="start_listening">Start listening</string>
    <string name="stop_listening">Stop listening</string>
    <string name="say_something">Say</string>
    <string name="introduction">Tap on one of the buttons to try an action</string>
    <string name="tts_hint">Write something to speech</string>
    <string name="repeat">Repeat please</string>
    <string name="input_something">Please input something to speak!</string>
    <string name="speech_not_available">Speech recognition is not available on this device. Do you want to install Google app to have speech recognition?</string>
    <string name="permission_required">You need to grant the permission to use the microphone</string>
    <string name="enable_google_voice_typing">Please enable Google Voice Typing to use speech recognition!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="ip_address">IP address</string>
    <string name="connect">Connect</string>
    <string name="enter_ip_address">Please enter IP address</string>
    <string name="ros_not_ready">RosCore not ready!</string>
    <string name="shutdown">Shutdown</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="offline">Offline</string>
    <string name="video_not_ready">The video is not ready yet, please try again in a short while</string>
    <string name="video_taken">A video was recorded to file %1$s.\nYou can find it in your Home->Media->Videos.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recording_time">Recording Time</string>
    <string name="tap_to_record">Tap to record</string>
    <string name="tap_to_stop">Tap to stop</string>
    <string name="stop">stop</string>
    <string name="about">About</string>
    <string name="license">License</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="help">Help</string>
    <string name="manual">Manual</string>
    <string name="setting">Settings</string>
    <string name="about_friday">About Friday™</string>
    <string name="friday_tm_app">Friday™ App</string>
    <string name="x_tend_robotics_2020">© X-tend Robotics 2020</string>
    <string name="name_empty">Name is empty</string>
    <string name="pass_empty">Password is empty</string>
    <string name="select_vpn_profile">Select VPN profile</string>
    <string name="incorrect_file_title">Incorrect file</string>
    <string name="incorrect_file_text">The file you’re trying to import to VPN profile doesn’t fit. Please choose another file and try again.</string>
    <string name="error">Error</string>
    <string name="profile_not_found">VPN profile not found</string>
    <string name="choose_vpn_profile">Choose VPN Profile</string>
    <string name="choose">choose</string>
    <string name="ip_empty">IP address is empty</string>

</resources>
