<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_menu_shape"
    android:layout_gravity="center"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/aboutLayout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/about"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="30dp"
                android:src="@drawable/ic_about" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/licenseLayout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/license"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="27dp"
                android:layout_height="29dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="25dp"
                android:src="@drawable/ic_agreement" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/termsLayout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/terms_of_service"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="27dp"
                android:layout_height="29dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="25dp"
                android:src="@drawable/ic_agreement_other" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/helpLayout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/help"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="23dp"
                android:src="@drawable/ic_help" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/manualLayout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/manual"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="42dp"
                android:layout_height="29dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_manual" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settingsLayout"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/setting"
                android:textColor="@android:color/white"
                android:textSize="19sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="29dp"
                android:layout_height="29dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="23dp"
                android:src="@drawable/ic_settings" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>