<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.robot.ui.navigation.NavigateFragment">


    <TextView
        android:id="@+id/textView"
        style="@style/TitleNavigationStile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/navigate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <org.ros.android.view.RosImageView
        android:id="@+id/cameraView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/lightGray"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/arrowUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:scaleType="centerCrop" />

<!--    <ImageView-->
<!--        android:id="@+id/mapView"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginBottom="16dp"-->
<!--        android:background="@color/lightGray"-->
<!--        android:contentDescription="@null"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/arrowUp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

    <RelativeLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/talkLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/photoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:drawableTop="@drawable/ic_picture"
            android:drawablePadding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/take_photo"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/goLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:drawableTop="@drawable/ic_go"
            android:drawablePadding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/go_to"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/videoLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:drawableTop="@drawable/ic_video"
            android:drawablePadding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/take_video"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />
    </RelativeLayout>

    <include
        android:id="@+id/talkLayout"
        layout="@layout/talk_bottom_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/arrowUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:src="@drawable/ic_arrow_u"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/arrowDown"
        app:layout_constraintEnd_toEndOf="@+id/arrowDown"
        app:layout_constraintStart_toStartOf="@+id/arrowDown" />

    <ImageView
        android:id="@+id/arrowDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_arrow_d"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/buttonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/arrowRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrow_r"
        app:layout_constraintBottom_toTopOf="@+id/arrowDown"
        app:layout_constraintStart_toEndOf="@+id/arrowUp" />

    <ImageView
        android:id="@+id/arrowLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_arrrow_l"
        app:layout_constraintBottom_toTopOf="@+id/arrowDown"
        app:layout_constraintEnd_toStartOf="@+id/arrowUp" />

    <TextView
        android:id="@+id/stopButton"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_centerInParent="true"
        android:background="@drawable/circular_textview"
        android:gravity="center"
        android:text="@string/stop"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/arrowDown"
        app:layout_constraintEnd_toStartOf="@+id/arrowRight"
        app:layout_constraintStart_toEndOf="@+id/arrowLeft"
        app:layout_constraintTop_toBottomOf="@+id/arrowUp" />

</androidx.constraintlayout.widget.ConstraintLayout>